testing bug fix on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -913,7 +913,7 @@ h4 {
     box-sizing: border-box;
     width: 100%;
     height: 40%;
-    transition: .2s bottom;
+    transition: .2s all;
     /* Internet Explorer 5.5+ */
     white-space: pre-wrap;
     /* css-3 */
@@ -925,6 +925,7 @@ h4 {
     /* Opera 7 */
     word-wrap: break-word;
     background-color: #fff;
+    opacity: 0;
 }
 
 .info-box .info-box-content {
@@ -953,6 +954,7 @@ h4 {
 .info-box.open {
     bottom: 0;
     box-shadow: 0 0 20px rgba(0, 0, 0, .3);
+    opacity: 1;
 }
 
 .info-button {
